--- a/notebooks/01-data-exploration.ipynb
+++ b/notebooks/01-data-exploration.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing Libraries\n",
+    "# Importando bibliotecas\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -502,14 +502,6 @@
     "# Estatísticas do valor das transações por classe\n",
     "df.groupby(\"Class\")[\"Amount\"].describe()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08753cd9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
